--- a/frontend/src/css/Fare.css
+++ b/frontend/src/css/Fare.css
@@ -78,7 +78,7 @@
 .vehicles_type p{
     font-size: larger;
     font-weight: 600;
-    background-color: #e91515;
+    background-color: #0000004c;
     border-radius: 5px;
     padding: 2px;
 }
