--- a/frontend/src/css/Fare.css
+++ b/frontend/src/css/Fare.css
@@ -43,12 +43,12 @@
 }
 .location_dt div p{
  
-    font-weight: 400;
-    color: #f5f5f5;
+       font-weight: 400;
+    color: #000000;
     letter-spacing: .5px;
-    padding: 8px 10px;
+    padding: 13px 10px;
     border: 1px solid #000000a2;
-    background-color: black;
+    background-color: #00000021;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -76,9 +76,17 @@
     gap: 5px;
 }
 .vehicles_type p{
-    font-size: larger;
+   font-size: larger;
     font-weight: 600;
-    background-color: #0000004c;
-    border-radius: 5px;
-    padding: 2px;
+    background-color: #0000000f;
+    border-radius: 1px;
+    padding: 2px 4px;
+}
+@media (min-width: 768px) {
+    .fare_container{
+        width: 50vw;
+        position: absolute;
+        left: 0;
+        transform: translate(50%, 0);
+    }
 }
